@@ -1,7 +1,10 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(ept,data.frame)
+S3method(ept,default)
 S3method(heatmaply,default)
 S3method(heatmaply,heatmapr)
+export(ept)
 export(ggheatmap)
 export(heatmaply)
 export(heatmapr)
